--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<meta name="viewport" content="width=800, initial-scale=1.0" />
+		<meta name="viewport" content="width=800" />
 		<title>Supaflare</title>
 	</head>
 	<body>
